@@ -154,15 +154,10 @@ class Sys::IO {
   
   native static method faccessat : int ($dirfd : int, $pathname : string, $mode : int, $flags : int);
   
-  static method eaccess_raw : int ($pathname : string, $mode : int) {
-    
-    my $status = &faccessat_raw(IO->AT_FDCWD, $pathname, $mode, IO->AT_EACCESS);
-    
-    return $status;
-  }
-  
   static method eaccess : int ($pathname : string, $mode : int) {
+    
     my $status = &faccessat(IO->AT_FDCWD, $pathname, $mode, IO->AT_EACCESS);
+    
     return $status;
   }
   
